Fix: Adjust values font, padding & gaps.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ section#hero div.container {
 
 section#hero div.container div.hero--titles span:nth-of-type(1) {
     color: var(--color-050);
-    font-size: 30px;
+    font-size: 32px;
     font-weight: 600;
 }
 
@@ -172,17 +172,17 @@ section#about div.container {
 
 section#about div.container div.about__elements {
     display: flex;
-    gap: 50px;
+    gap: 30px;
 }
 
 section#about div.container div.about__elements div.about__elements--profile {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 30px;
     width: 25%;
 }
 
-section#about div.container div.about__elements div.about__elements--profile div.elements__profile--images img {
+section#about div.container div.about__elements div.about__elements--profile img {
     border: 5px solid var(--color-050);
     border-radius: 10px;
     height: 100%;
@@ -190,7 +190,7 @@ section#about div.container div.about__elements div.about__elements--profile div
     transition: .3s;
 }
 
-section#about div.container div.about__elements div.about__elements--profile div.elements__profile--images img:hover {
+section#about div.container div.about__elements div.about__elements--profile img:hover {
     border: 5px solid var(--color-300);
     box-shadow: 0 0 25px var(--color-950);
     transform: scale(1.05);
@@ -199,7 +199,7 @@ section#about div.container div.about__elements div.about__elements--profile div
 section#about div.container div.about__elements div.about__elements--profile div.elements__profile--icons {
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 30px;
 }
 
 section#about div.container div.about__elements div.about__elements--profile div.elements__profile--icons a {
@@ -226,7 +226,7 @@ section#about div.container div.about__elements div.about__elements--infos {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 50px;
+    gap: 30px;
     width: 75%;
 }
 
@@ -251,7 +251,7 @@ section#about div.container div.about__elements div.about__elements--infos div.e
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 20px;
+    padding: 30px;
     background-color: var(--color-700);
     border-radius: 10px;
     transition: .3s;
@@ -423,7 +423,7 @@ section#experience div.container div.experience__elements div.experience__elemen
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 20px;
+    gap: 30px;
     padding: 30px;
 }
 
@@ -443,8 +443,8 @@ section#experience div.container div.experience__elements div.experience__elemen
 }
 
 section#experience div.container div.experience__elements div.experience__elements--content div.elements__content--cards div.content__cards--tech div.cards__tech--description span:nth-of-type(3) {
-    font-size: 14px;
-    margin-top: 20px;
+    font-size: 16px;
+    margin-top: 30px;
 }
 
 section#experience div.container div.experience__elements div.experience__elements--content div.elements__content--cards div.content__cards--tech div.cards__tech--links {
@@ -459,13 +459,15 @@ section#experience div.container div.experience__elements div.experience__elemen
 
 section#experience div.container div.experience__elements div.experience__elements--content div.elements__content--cards div.content__cards--tech div.cards__tech--links div.tech__links {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     justify-items: center;
-    gap: 20px;
+    gap: 30px;
 }
 
 section#experience div.container div.experience__elements div.experience__elements--content div.elements__content--cards div.content__cards--tech div.cards__tech--links div.tech__links img {
     border-radius: 50px;
+    width: 100%;
+    height: 100%;
     transition: .3s;
 }
 
@@ -484,7 +486,7 @@ section#contact div.container {
 section#contact div.container div.contact__elements {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 30px;
 }
 
 section#contact div.container div.contact__elements div.contact__elements--infos {
@@ -494,13 +496,13 @@ section#contact div.container div.contact__elements div.contact__elements--infos
     gap: 30px;
 }
 
-section#contact div.container div.contact__elements div.contact__elements--infos span:nth-of-type(1) {
+section#contact div.container div.contact__elements div.contact__elements--infos span {
     color: var(--color-300);
     font-size: 36px;
     font-weight: 900;
 }
 
-section#contact div.container div.contact__elements div.contact__elements--infos span:nth-of-type(2) {
+section#contact div.container div.contact__elements div.contact__elements--infos p {
     color: var(--color-050);
     font-size: 22px;
 }
